Fix active page on mobile

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -127,7 +127,7 @@
 	}
 
 	.navbar-menu {
-		@apply p-32 pt-88 xl:p-0 w-full xl:w-auto h-[calc(100dvh)] flex flex-col justify-between xl:h-auto fixed xl:static top-0 -right-full bg-neutral-900 xl:bg-transparent transition-transform duration-500;
+		@apply p-32 pt-88 xl:p-0 w-full xl:w-auto h-[calc(100dvh)] flex flex-col justify-between xl:h-auto fixed xl:static top-0 -right-full overflow-hidden bg-neutral-900 xl:bg-transparent transition-transform duration-500;
 	}
 
 	.navbar-menu-list {
@@ -139,7 +139,7 @@
 	}
 
 	.navbar-menu-link.active::before {
-		@apply content-[''] size-4 absolute left-1/2 -bottom-10 -translate-x-1/2 rounded-full bg-neutral-10;
+		@apply content-[''] size-24 lg:size-4 absolute top-1/2 lg:top-unset -left-[45px] lg:left-1/2 lg:-bottom-10 -translate-y-1/2 lg:translate-y-0 lg:-translate-x-1/2 rounded-full bg-primary-300 lg:bg-neutral-10;
 	}
 
 	.navbar-mobile-menu-button {
